Add all the starter pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,16 @@
 <header>
-  <p>Header</p>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="/" class="brand-logo">Healthyfoodsfordummies.com</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="{{ "/sugar.html" | relative_url }}">SUGAR</a></li>
+        <li><a href="{{ "/fats.html" | relative_url }}">Good fats/bad fats</a></li>
+        <li><a href="{{ "/labels.html" | relative_url }}">Read the labels</a></li>
+        <li><a href="{{ "/children.html" | relative_url }}">Children’s health</a></li>
+        <li><a href="{{ "/lose-weight.html" | relative_url }}">Lose weight</a></li>
+        <li><a href="{{ "/supplements.html" | relative_url }}">Recommended Supplements</a></li>
+        <li><a href="{{ "/cannabis.html" | relative_url }}">Cannabis oil</a></li>
+      </ul>
+    </div>
+  </nav>
 </header>
