--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {%- include header.html -%}
 
-    <main class="page-content">
+    <main class="page-content container">
       <div class="wrapper">
         {{ content }}
       </div>
