Add the correct root url to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo">Healthyfoodsfordummies.com</a>
+      <a href="{{ "/" | relative_url }}" class="brand-logo">Healthyfoodsfordummies.com</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="{{ "/sugar.html" | relative_url }}">SUGAR</a></li>
         <li><a href="{{ "/fats.html" | relative_url }}">Good fats/bad fats</a></li>
