--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <header>
-  <nav>
+  <nav class="nav-extended">
     <div class="nav-wrapper">
       <a href="{{ "/" | relative_url }}" class="brand-logo">Healthyfoodsfordummies.com</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+    </div>
+    <div class="nav-content">
+      <ul class="tabs tabs-transparent">
         <li><a href="{{ "/sugar.html" | relative_url }}">SUGAR</a></li>
         <li><a href="{{ "/fats.html" | relative_url }}">Good fats/bad fats</a></li>
         <li><a href="{{ "/labels.html" | relative_url }}">Read the labels</a></li>
