--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,9 @@
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
 
-p {
-  font-size: 30px;
+main {
+  flex: 1 0 auto;
 }
