Add new layouts for blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
         <li><a href="{{ "/lose-weight.html" | relative_url }}">Lose weight</a></li>
         <li><a href="{{ "/supplements.html" | relative_url }}">Recommended Supplements</a></li>
         <li><a href="{{ "/cannabis.html" | relative_url }}">Cannabis oil</a></li>
+        <li><a href="{{ "/all-posts.html" | relative_url }}">Blog</a></li>
       </ul>
     </div>
   </nav>
