--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<article class="post">
+<section class="page">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+  <header class="page-header">
+    <h1 class="page-title">{{ page.title | escape }}</h1>
   </header>
 
-  <div class="post-content">
+  <div class="page-content">
     {{ content }}
   </div>
 
-</article>
+</section>
