Add recipes section
Break apart recipes into collections

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,14 +5,17 @@
     </div>
     <div class="nav-content">
       <ul class="tabs tabs-transparent">
-        <li><a href="{{ "/sugar.html" | relative_url }}">SUGAR</a></li>
-        <li><a href="{{ "/fats.html" | relative_url }}">Good fats/bad fats</a></li>
-        <li><a href="{{ "/labels.html" | relative_url }}">Read the labels</a></li>
-        <li><a href="{{ "/children.html" | relative_url }}">Children’s health</a></li>
-        <li><a href="{{ "/lose-weight.html" | relative_url }}">Lose weight</a></li>
-        <li><a href="{{ "/supplements.html" | relative_url }}">Recommended Supplements</a></li>
-        <li><a href="{{ "/cannabis.html" | relative_url }}">Cannabis oil</a></li>
-        <li><a href="{{ "/all-posts.html" | relative_url }}">Blog</a></li>
+        
+        <li><a href="{{ "/sugar" | relative_url }}">SUGAR</a></li>
+        <li><a href="{{ "/fats" | relative_url }}">Good fats/bad fats</a></li>
+        <li><a href="{{ "/labels" | relative_url }}">Read the labels</a></li>
+        <li><a href="{{ "/children" | relative_url }}">Children’s health</a></li>
+        <li><a href="{{ "/lose-weight" | relative_url }}">Lose weight</a></li>
+        <li><a href="{{ "/supplements" | relative_url }}">Recommended Supplements</a></li>
+        <li><a href="{{ "/cannabis" | relative_url }}">Cannabis oil</a></li>
+        <li><a href="{{ "/all-posts" | relative_url }}">Blog</a></li>
+        <li><a href="{{ "/recipes" | relative_url }}">Recipes</a></li>
+        
       </ul>
     </div>
   </nav>
