change the layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,25 @@
-<header>
-  <nav class="nav-extended">
-    <div class="nav-wrapper">
+<header class="site-header">
+  <nav class="site-navigation">
+    <!-- <div class="page-navigation__header">
       <a href="{{ "/" | relative_url }}" class="brand-logo">Healthyfoodsfordummies.com</a>
-    </div>
-    <div class="nav-content">
-      <ul class="tabs tabs-transparent">
+    </div> -->
+    <!-- <div class="page-navigation__content"> -->
+      <ul class="site-navigation__links">
         
-        <li><a href="{{ "/sugar" | relative_url }}">SUGAR</a></li>
-        <li><a href="{{ "/fats" | relative_url }}">Good fats/bad fats</a></li>
-        <li><a href="{{ "/labels" | relative_url }}">Read the labels</a></li>
-        <li><a href="{{ "/children" | relative_url }}">Children’s health</a></li>
-        <li><a href="{{ "/lose-weight" | relative_url }}">Lose weight</a></li>
-        <li><a href="{{ "/supplements" | relative_url }}">Recommended Supplements</a></li>
-        <li><a href="{{ "/cannabis" | relative_url }}">Cannabis oil</a></li>
-        <li><a href="{{ "/all-posts" | relative_url }}">Blog</a></li>
-        <li><a href="{{ "/recipes" | relative_url }}">Recipes</a></li>
+        <li><a class="site-navigation__link" href="{{ "/" | relative_url }}" class="site-navigation__brand-logo">Healthyfoodsfordummies.com</a></li>
+        <li><a class="site-navigation__link" href="{{ "/sugar" | relative_url }}">SUGAR</a></li>
+        <li><a class="site-navigation__link" href="{{ "/fats" | relative_url }}">Good fats/bad fats</a></li>
+        <li><a class="site-navigation__link" href="{{ "/labels" | relative_url }}">Read the labels</a></li>
+        <li><a class="site-navigation__link" href="{{ "/children" | relative_url }}">Children’s health</a></li>
+        <li><a class="site-navigation__link" href="{{ "/lose-weight" | relative_url }}">Lose weight</a></li>
+        <li><a class="site-navigation__link" href="{{ "/supplements" | relative_url }}">Recommended Supplements</a></li>
+        <li><a class="site-navigation__link" href="{{ "/cannabis" | relative_url }}">Cannabis oil</a></li>
+        <li><a class="site-navigation__link" href="{{ "/all-posts" | relative_url }}">Blog</a></li>
+        <li><a class="site-navigation__link" href="{{ "/recipes" | relative_url }}">Recipes</a></li>
         
       </ul>
-    </div>
+    <!-- </div> -->
   </nav>
 </header>
+
+<!-- active -->
