--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,14 @@
 
     {%- include header.html -%}
 
-    <main class="page-content container">
-      <div class="wrapper">
+    <main class="site-container">
+      <div class="site-content">
         {{ content }}
       </div>
-    </main>
+    
 
-    {%- include footer.html -%}
+      {%- include footer.html -%}
+    </main>
 
   </body>
 
