--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer">
+<footer class="site-footer">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
