--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section class="page">
+<section class="page-container">
 
   <header class="page-header">
     <h1 class="page-title">{{ page.title | escape }}</h1>
