--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<article class="post recipe-post">
+<article class="post post--recipe">
 
-  <header class="post__header container container--inner">
+  <header class="post__header">
     <h1 class="post__title hide-on-small-only">{{ page.title | escape }}</h1>
     <h1 class="post__title hide-on-med-and-up">{{ page.title-short | escape }}</h1>
   </header>
