--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <!-- <div class="page-navigation__content"> -->
       <ul class="site-navigation__links">
         
-        <li><a class="site-navigation__link" href="{{ "/" | relative_url }}" class="site-navigation__brand-logo">Healthyfoodsfordummies.com</a></li>
+        <li><a class="site-navigation__link" href="{{ "/" | relative_url }}" class="site-navigation__brand-logo">Happy Healthy Nut</a></li>
         <li><a class="site-navigation__link" href="{{ "/sugar" | relative_url }}">SUGAR</a></li>
         <li><a class="site-navigation__link" href="{{ "/fats" | relative_url }}">Good fats/bad fats</a></li>
         <li><a class="site-navigation__link" href="{{ "/labels" | relative_url }}">Read the labels</a></li>
