Update children's health

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         <li><a class="site-navigation__link" href="{{ "/" | relative_url }}" class="site-navigation__brand-logo">Happy Healthy Nut</a></li>
         <li><a class="site-navigation__link" href="{{ "/sugar" | relative_url }}">Sugar</a></li>
         <li><a class="site-navigation__link" href="{{ "/fats" | relative_url }}">Fats</a></li>
-        <li><a class="site-navigation__link" href="{{ "/labels" | relative_url }}">Read the labels</a></li>
+        <li><a class="site-navigation__link" href="{{ "/labels" | relative_url }}">Labels</a></li>
         <li><a class="site-navigation__link" href="{{ "/children" | relative_url }}">Children’s health</a></li>
         <li><a class="site-navigation__link" href="{{ "/lose-weight" | relative_url }}">Lose weight</a></li>
         <li><a class="site-navigation__link" href="{{ "/supplements" | relative_url }}">Recommended Supplements</a></li>
