--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         <li><a class="site-navigation__link" href="{{ "/lose-weight" | relative_url }}">Lose weight</a></li>
         <li><a class="site-navigation__link" href="{{ "/supplements" | relative_url }}">Recommended Supplements</a></li>
         <li><a class="site-navigation__link" href="{{ "/cannabis" | relative_url }}">Cannabis oil</a></li>
-        <li><a class="site-navigation__link" href="{{ "/all-posts" | relative_url }}">Blog</a></li>
+        <li><a class="site-navigation__link" href="{{ "/blog" | relative_url }}">Blog</a></li>
         <li><a class="site-navigation__link" href="{{ "/recipes" | relative_url }}">Recipes</a></li>
         
       </ul>
