Add more images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     {%- include header.html -%}
 
     <main class="site-container">
+      <img style="width: 100%;" src="{{ "/assets/Front of website.jpg" | relative_url }}" alt="">
       <div class="site-content">
         {{ content }}
       </div>
